# target-apprise

./: LICENSE  README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml  release.yml
target_apprise/: sinks.py  target.py
target_apprise/tests/: __init__.py  test_core.py
usage_examples/: input_example.jsonl  input_example_with_dynamic_target_email.jsonl
