[tool.poetry]
name = "target-apprise"
version = "0.0.1"
description = "`target-apprise` is a Singer target for Apprise, built with the Meltano SDK for Singer Targets."
authors = ["AutoIDM"]
keywords = [
    "ELT",
    "Apprise",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
requests = "^2.25.1"
singer-sdk = "^0.4.5"
apprise = "0.9.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^22.3.0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "target_apprise"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-apprise = 'target_apprise.target:TargetApprise.cli'
