[tool.poetry]
name = "target-apprise"
version = "0.0.0" # Not used. Our version is managed by poetry_dynamic_versioning.
description = "`target-apprise` is a Singer target for Apprise, built with the Meltano SDK for Singer Targets."
authors = ["AutoIDM"]
keywords = [
    "ELT",
    "Apprise",
]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
requests = "^2.25.1"
singer-sdk = "^0.41.0"
apprise = "1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^22.3.0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "target_apprise"

[build-system]
requires = ["poetry-core>=1.9.0", "poetry-dynamic-versioning>=1.4.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry.scripts]
# CLI declaration
target-apprise = 'target_apprise.target:TargetApprise.cli'
